force-app/main/default/objects/AE_SB__c/AE_SB__c.object-meta.xml
<CustomObject>
    <label>AE/SB</label>
    <nameField>
        <label>AE/SB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AE/SB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>