force-app/main/default/objects/AE_SB__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to make AE/SB active on the website - used to make this controllable by product team</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>