force-app/main/default/objects/AE_SB__c/fields/data_refresh__c.field-meta.xml
<CustomField>
    <fullName>data_refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>data refresh</label>
    <type>Checkbox</type>
</CustomField>