force-app/main/default/objects/AE_SB__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>AE/SB</relationshipLabel>
    <relationshipName>AE_SB</relationshipName>
    <type>Lookup</type>
</CustomField>