force-app/main/default/objects/AE_SB__c/fields/fee_application__c.field-meta.xml
<CustomField>
    <fullName>fee_application__c</fullName>
    <label>Fee Application (AESB)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fee_Application</valueSetName>
    </valueSet>
</CustomField>