force-app/main/default/objects/AE_SB__c/fields/image__c.field-meta.xml
<CustomField>
    <fullName>image__c</fullName>
    <label>Image</label>
    <length>200</length>
    <type>Text</type>
</CustomField>