force-app/main/default/objects/AE_SB__c/fields/Includes__c.field-meta.xml
<CustomField>
    <fullName>Includes__c</fullName>
    <label>Includes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>