force-app/main/default/objects/AE_SB__c/fields/linked_deal__c.field-meta.xml
<CustomField>
    <fullName>linked_deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>AE/SB (Linked Deal)</relationshipLabel>
    <relationshipName>AE_SB1</relationshipName>
    <type>Lookup</type>
</CustomField>