force-app/main/default/objects/AE_SB__c/fields/Night_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Night_Ticket__c</fullName>
    <inlineHelpText>Please select ticket for flight change costs and select night for accomodation.</inlineHelpText>
    <label>Night/Ticket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Night</fullName>
            </value>
            <value>
                <fullName>Ticket Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>