force-app/main/default/objects/AE_SB__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option</label>
    <referenceTo>options__c</referenceTo>
    <relationshipLabel>AE/SB</relationshipLabel>
    <relationshipName>AE_SB</relationshipName>
    <type>Lookup</type>
</CustomField>