force-app/main/default/objects/AE_SB__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order on site</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>