force-app/main/default/objects/AE_SB__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>AE/SB</relationshipLabel>
    <relationshipName>AE_SB</relationshipName>
    <type>Lookup</type>
</CustomField>