force-app/main/default/objects/AE_SB__c/fields/Target_Margin__c.field-meta.xml
<CustomField>
    <fullName>Target_Margin__c</fullName>
    <formula>Target_Sell_Price__c -  Target_Invoice_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Margin($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>