force-app/main/default/objects/AE_SB__c/fields/Target_MarginPercent__c.field-meta.xml
<CustomField>
    <fullName>Target_MarginPercent__c</fullName>
    <formula>Target_Margin__c / Target_Sell_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Margin()</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>