force-app/main/default/objects/AE_SB__c/fields/Target_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>Target_Sell_Price__c</fullName>
    <label>Target Sell Price</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>