force-app/main/default/objects/AE_SB__c/fields/UI_Name__c.field-meta.xml
<CustomField>
    <fullName>UI_Name__c</fullName>
    <formula>name__c +&apos;-&apos;+IF(INCLUDES(site__c, &apos;AU&apos;),&apos;AU&apos;,IF(INCLUDES(site__c, &apos;NZ&apos;),&apos;NZ&apos;,&apos;&apos; ) )+&apos;-&apos;+IF( Active__c, &apos;Active&apos;,&apos;Inactive&apos;)+&apos; | $&apos;+ TEXT( price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UI Name</label>
    <type>Text</type>
</CustomField>