force-app/main/default/objects/AE_SB__c/validationRules/Populate_Deal_or_Option.validationRule-meta.xml
<ValidationRule>
    <fullName>Populate_Deal_or_Option</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
NOT( ISBLANK( Deal__c )), NOT( ISBLANK( Option__c ))
),
AND(
ISBLANK( Deal__c ) , ISBLANK( Option__c )
) 
)</errorConditionFormula>
    <errorDisplayField>Deal__c</errorDisplayField>
    <errorMessage>Please nominate either &quot;Deal&quot; OR &quot;Option&quot; to save this record (but not both)</errorMessage>
</ValidationRule>