force-app/main/default/objects/AE_SB__c/listViews/Kate_Testing.listView-meta.xml
<ListView>
    <fullName>Kate_Testing</fullName>
    <columns>NAME</columns>
    <columns>linked_deal__c</columns>
    <columns>Deal__c</columns>
    <columns>Option__c</columns>
    <columns>site__c</columns>
    <columns>price__c</columns>
    <columns>price_nz__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>linked_deal__c</field>
        <operation>equals</operation>
    </filters>
    <label>Kate Testing</label>
    <sharedTo>
        <group>IT_Team</group>
    </sharedTo>
</ListView>